# AutoZdns

./: add_domain.py  basic_object.py  main.py  public_method.py  pyproject.toml  test_data.json
domain/: DELETE_DOMAIN_README.md  add_domain.py  add_static.json  delete_domain.json  delete_domain.py  delete_domain_dynamic.json  delete_domain_static.json  disable_domain.py  enable_domain.py  modify_domain.py  query_domain.py  test_data.json
domain/input/: add_dynamic.json  delete_domain.json  disable_domain.json  enable_domain.json  modify_domain.json  query_domain.json
pool/: add_pool.py  delete_pool.py  disable_pool.py  enable_pool.py  modify_pool.py  query_pool.py
pool/input/: add_pool.json  delete_pool.json  disable_pool.json  enable_pool.json  modify_pool.json  query_pool.json
record/: add_record.py  delete_record.py  disable_record.py  enable_record.py  query_record.py
record/input/: add_record.json  delete_record.json  disable_record.json  enable_record.json  query_record.json
tool/: public_method.py
