[project]
name = "autozdns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paramiko>=3.5.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
